--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="158dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="26dp"
-        android:background="#9F9696"
+        android:background="#5C5555"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -58,7 +58,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="26dp"
         android:layout_marginEnd="8dp"
-        android:background="#9F9696"
+        android:background="#5C5555"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/constraintLayout"
         app:layout_constraintTop_toTopOf="parent">
@@ -103,8 +103,7 @@
         android:id="@+id/constraintLayout3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="189dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginTop="250dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -121,8 +120,8 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#9F9696"
+                android:layout_height="190dp"
+                android:background="#5C5555"
                 android:orientation="vertical">
 
                 <TextView
@@ -146,6 +145,7 @@
                     android:id="@+id/slider"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="bottom|center|center_horizontal"
                     android:contentDescription="sadas" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
@@ -155,15 +155,16 @@
         android:id="@+id/cardView6"
         android:layout_width="190dp"
         android:layout_height="125dp"
-        android:layout_margin="10dp"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_margin="14dp"
+        android:layout_marginStart="10dp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/constraintLayout3">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="#9F9696"
-            >
+            android:background="#5C5555"
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -171,7 +172,7 @@
                 android:layout_gravity="center_horizontal"
                 android:text="@string/txtPeso"
                 android:textColor="@color/white"
-                android:textSize="11sp"/>
+                android:textSize="11sp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -179,7 +180,7 @@
                 android:layout_gravity="center_horizontal"
                 android:text="@string/ValPeso"
                 android:textColor="@color/white"
-                android:textSize="30sp"/>
+                android:textSize="30sp" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -191,31 +192,34 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
-                    android:src="@drawable/minus"
-                    android:importantForAccessibility="no" />
+                    android:background="#FF9E9C9C"
+                    android:importantForAccessibility="no"
+                    android:src="@drawable/minus" />
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
-                    android:src="@drawable/plus"
-                    android:importantForAccessibility="no" />
+                    android:background="#FF9E9C9C"
+                    android:importantForAccessibility="no"
+                    android:src="@drawable/plus" />
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView7"
         android:layout_width="190dp"
         android:layout_height="125dp"
-        android:layout_margin="10dp"
+        android:layout_margin="14dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/constraintLayout3"
-        >
+        app:layout_constraintTop_toBottomOf="@id/constraintLayout3">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="#9F9696">
+            android:background="#5C5555"
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -223,7 +227,7 @@
                 android:layout_gravity="center_horizontal"
                 android:text="@string/txtEdad"
                 android:textColor="@color/white"
-                android:textSize="11sp"/>
+                android:textSize="11sp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -231,7 +235,7 @@
                 android:layout_gravity="center_horizontal"
                 android:text="@string/ValEdad"
                 android:textColor="@color/white"
-                android:textSize="30sp"/>
+                android:textSize="30sp" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -244,23 +248,27 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_margin="8dp"
-                    android:src="@drawable/minus"
-                    android:importantForAccessibility="no" />
+                    android:background="#FF9E9C9C"
+                    android:importantForAccessibility="no"
+                    android:src="@drawable/minus" />
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_margin="8dp"
-                    android:src="@drawable/plus"
-                    android:importantForAccessibility="no" />
+                    android:background="#FF9E9C9C"
+                    android:importantForAccessibility="no"
+                    android:src="@drawable/plus" />
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_margin="80dp"
+        android:text="@string/calcular"
         app:layout_constraintTop_toBottomOf="@id/cardView7"
-        android:text="@string/calcular"/>
+        tools:layout_editor_absoluteX="10dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
