--- a/app/src/main/res/layout/activity_imc.xml
+++ b/app/src/main/res/layout/activity_imc.xml
@@ -12,43 +12,43 @@
         android:layout_width="190dp"
         android:layout_height="158dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="26dp"
-        android:background="#5C5555"
+        android:layout_marginTop="50dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        >
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView2"
+            app:cardCornerRadius="25dp"
+            android:backgroundTint="#5C5555"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            android:layout_height="match_parent"
+            app:layout_constraintStart_toStartOf="parent">
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="94dp"
-            android:layout_height="0dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="25dp"
-            app:layout_constraintBottom_toTopOf="@+id/textView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/female" />
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="94dp"
+                android:layout_height="84dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="25dp"
+                app:layout_constraintBottom_toTopOf="@+id/textView"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/female" />
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
-            android:text="@string/txtMujer"
-            android:textColor="@color/white"
-            app:layout_constraintBottom_toTopOf="@+id/cardView2"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.495"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/txtMujer"
+                android:textColor="@color/white"
+                android:layout_marginTop="110dp"
+                android:layout_gravity="center_horizontal"
+                />
+
+        </androidx.cardview.widget.CardView>
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -56,78 +56,72 @@
         android:layout_width="190dp"
         android:layout_height="158dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="26dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="8dp"
-        android:background="#5C5555"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/constraintLayout"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            app:layout_constraintBottom_toTopOf="@+id/imageView1"
+            app:cardCornerRadius="25dp"
+            android:backgroundTint="#5C5555"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toStartOf="parent">
 
-        <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="94dp"
-            android:layout_height="0dp"
-            android:layout_marginBottom="25dp"
-            app:layout_constraintBottom_toTopOf="@+id/textView1"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.492"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cardView"
-            app:srcCompat="@drawable/male" />
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="94dp"
+                android:layout_height="84dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="25dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:srcCompat="@drawable/male" />
 
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
-            android:text="@string/TxtHombre"
-            android:textColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.495"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView1" />
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="30dp"
+                android:text="@string/TxtHombre"
+                android:textColor="@color/white"
+                android:layout_marginTop="110dp"
+                android:layout_gravity="center_horizontal" />
+
+        </androidx.cardview.widget.CardView>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout3"
-        android:layout_width="0dp"
+        android:layout_width="388dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="250dp"
+        android:layout_marginTop="255dp"
+        android:layout_marginRight="10dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.cardview.widget.CardView
-
             android:id="@+id/cardView3"
-            android:layout_width="0dp"
+            app:cardCornerRadius="25dp"
+            android:backgroundTint="#5C5555"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintBottom_toBottomOf="parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="190dp"
-                android:background="#5C5555"
+                android:layout_height="180dp"
                 android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="25dp"
                     android:text="@string/txtAltura"
                     android:textColor="@color/white"
                     android:textSize="11sp" />
@@ -136,38 +130,39 @@
                     android:id="@+id/sliderTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
                     android:layout_gravity="center_horizontal"
                     android:text="@string/TipoAltura"
                     android:textColor="@color/white"
                     android:textSize="30sp" />
 
                 <com.google.android.material.slider.RangeSlider
+                    android:layout_marginTop="10dp"
                     android:id="@+id/slider"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom|center|center_horizontal"
-                    android:contentDescription="sadas" />
+                    android:layout_height="wrap_content" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView6"
+        app:cardCornerRadius="25dp"
         android:layout_width="190dp"
-        android:layout_height="125dp"
-        android:layout_margin="14dp"
-        android:layout_marginStart="10dp"
+        android:layout_height="158dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginStart="8dp"
+        android:backgroundTint="#5C5555"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/constraintLayout3">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#5C5555"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <TextView
-
+                android:layout_marginTop="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
@@ -213,19 +208,22 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView7"
+        app:cardCornerRadius="25dp"
         android:layout_width="190dp"
-        android:layout_height="125dp"
-        android:layout_margin="14dp"
+        android:layout_height="158dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginRight="8dp"
+        android:backgroundTint="#5C5555"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/constraintLayout3">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#5C5555"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <TextView
+                android:layout_marginTop="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
@@ -273,10 +271,11 @@
 
     <Button
         android:id="@+id/calcular"
-        android:layout_width="match_parent"
+        android:layout_width="390dp"
         android:layout_height="wrap_content"
-        android:layout_margin="80dp"
+        android:layout_marginTop="40dp"
         android:text="@string/calcular"
+        android:layout_marginLeft="10dp"
         app:layout_constraintTop_toBottomOf="@id/cardView7"
-        tools:layout_editor_absoluteX="10dp" />
+        app:layout_constraintStart_toStartOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
