--- a/app/src/main/res/layout/activity__main.xml
+++ b/app/src/main/res/layout/activity__main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/fondomenu"
-    tools:context=".Main_Activity">
+    tools:context=".Activity_main">
 
 
     <LinearLayout
@@ -82,6 +82,25 @@
             android:layout_height="100dp">
         </Button>
 
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        app:layout_constraintTop_toBottomOf="@+id/layoutsegundo">
+
+        <Button
+            android:id="@+id/botonsalir"
+            android:text="@string/salir"
+            android:textColor="@color/textoco"
+            android:backgroundTint="@color/botoncolor"
+            android:layout_marginLeft="140dp"
+            android:layout_width="150dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center">
+        </Button>
 
     </LinearLayout>
 
